// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegularButton should have button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Button
</button>
`;

exports[`RegularButton should have disabled button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={true}
  size="mega"
  target={null}
>
  Disabled button
</button>
`;

exports[`RegularButton should have flat button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  border-width: 0px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 2px 2px 0 rgba(12,15,20,0.06),0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-0:active {
  background-color: #1641AC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 0 1px 0 rgba(12,15,20,0.06),0 2px 2px 0 rgba(12,15,20,0.06);
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-width: 0;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:focus {
  border-width: 2px;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Flat button
</button>
`;

exports[`RegularButton should have flat disabled button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  border-width: 0px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 2px 2px 0 rgba(12,15,20,0.06),0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-0:active {
  background-color: #1641AC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 0 1px 0 rgba(12,15,20,0.06),0 2px 2px 0 rgba(12,15,20,0.06);
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-width: 0;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:focus {
  border-width: 2px;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={true}
  size="mega"
  target={null}
>
  Flat button
</button>
`;

exports[`RegularButton should have giga button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(12px - 0px) calc(32px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(12px - 1px) calc(32px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(12px - 0px) calc(32px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="giga"
  target={null}
>
  Button
</button>
`;

exports[`RegularButton should have kilo button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="kilo"
  target={null}
>
  Button
</button>
`;

exports[`RegularButton should have mega button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Button
</button>
`;

exports[`RegularButton should have secondary button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
  color: #5C656F;
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-0:active {
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
}

.circuit-0:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

.circuit-0:hover {
  background-color: transparent;
  border-width: 0;
  border-color: #212933;
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:hover:focus,
.circuit-0:active:focus {
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:focus {
  color: #212933;
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Secondary button
</button>
`;

exports[`RegularButton should have secondary disabled button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
  color: #5C656F;
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-0:active {
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
}

.circuit-0:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

.circuit-0:hover {
  background-color: transparent;
  border-width: 0;
  border-color: #212933;
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:hover:focus,
.circuit-0:active:focus {
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:focus {
  color: #212933;
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={true}
  size="mega"
  target={null}
>
  Secondary disabled button
</button>
`;

exports[`RegularButton should have secondary flat button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
  color: #5C656F;
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-0:active {
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
}

.circuit-0:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

.circuit-0:hover {
  background-color: transparent;
  border-width: 0;
  border-color: #212933;
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:hover:focus,
.circuit-0:active:focus {
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:focus {
  color: #212933;
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Secondary flat button
</button>
`;

exports[`RegularButton should have stretch button styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  width: 100%;
  display: block;
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Stretched button
</button>
`;
